Finding Partition 2 status message position #18

--- a/config.json.sample.json
+++ b/config.json.sample.json
@@ -16,7 +16,7 @@
         	 	},
                         
        		        {
-        		"name": "Alarm_Partition_2",
+        		"name": "Alarm_Partition_2|inactive",
         		"config": {
         			"type": "Alarm",
                                 "partition": 1
