--- a/config.json.sample.json
+++ b/config.json.sample.json
@@ -22,6 +22,10 @@
                                 "partition": 1
         			}
         	 	},
+                        
+                        {
+                        "name": "Connected"    
+                        },
         	 	
         		{
         		"name": "Garage Door",
