Added switch to disconnect from alarm for 3rd party access #2

--- a/config.json.sample.json
+++ b/config.json.sample.json
@@ -24,7 +24,10 @@
         	 	},
                         
                         {
-                        "name": "Connected"    
+                        "name": "Connected",
+                        "config": {
+                                "type": "Connected"
+                                }
                         },
         	 	
         		{
